# pythonProject8

./: README.md  pyproject.toml
src/: task.py
tests/: test_task.py
