[project]
name = "pythonproject8"
version = "0.1.0"
description = ""
authors = [
    {name = "Батр Эрднеев",email = "erdneevb@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
requests = "^2.32.3"

